--- a/webapp/view/MainView.view.xml
+++ b/webapp/view/MainView.view.xml
@@ -1,9 +1,21 @@
 <mvc:View controllerName="jlobatoragroup.invoices.controller.MainView"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-    xmlns="sap.m">
+    xmlns="sap.m"
+    xmlns:core="sap.ui.core">
     <Page id="page" title="{i18n>title}">
         <content>
-            <Text text='Hola'></Text> 
+            <Panel headerText="{i18n>selectionScreen}">
+                <Label id="LabelShipName" text="Ship Name" class="sapUiSmallMargin"/>
+                <Input id="shipName" width="200px" class="sapUiSmallMarginEnd"/>
+                <Label id="labelCountry" text="{i18n>country}" class="sapUiSmallMargin"/>
+                <Select id="slCountry" selectedKey="{selectionScreen>/CountryKey}" 
+                                       forceSelection="false" 
+                                       items="{selectionScreen>/Countries}">
+                    <items>
+                    <core:Item key="{selectionScreen>key}" text="{selectionScreen>text}"/>
+                    </items>
+                </Select>                                       
+            </Panel>
         </content>
     </Page>
 </mvc:View>
